# render_demo

./: .gitignore  Cargo.toml  README.md  btex spec.txt  build.rs  texture formats.txt
assets/models/: .gitignore  9mm.fbx
assets/shaders/: ehaa_resolve.frag.glsl  ehaa_resolve.vert.glsl  oversized_screen_triangle.incl.ssl  post_composite.frag.ssl  post_composite.program  post_composite.vert.ssl  post_resolve.frag.glsl  post_resolve.vert.glsl  scene_ehaa.frag.glsl  scene_ehaa.tesseval.glsl  scene_ehaa.vert.glsl  separable_sss_resolve.frag.glsl  separable_sss_resolve.frag.ssl  separable_sss_resolve.program  separable_sss_resolve.vert.ssl
assets/surfaces/: main_scene_forward.program  main_scene_forward.vert.ssl  main_scene_forward_subsurface.frag.ssl  main_scene_forward_subsurface.program
gl_bindings/: Cargo.toml  build.rs
gl_bindings/src/: lib.rs
src/: bool_cmpxchg.rs  demo.rs  engine.rs  main.rs
src/asset/: asset_manager.rs  asset_path.rs  mod.rs
src/btex/: btex_data.rs  btex_format_registry.rs  btex_parser.rs  btex_writer.rs  mod.rs
src/camera/: camera.rs  mod.rs  orbit_angles.rs  projection.rs  utils.rs
src/garbagecs/: entity_store.rs  entity_trait.rs  mod.rs  prototype.rs  prototype_registry.rs
src/math/: matrix_utils.rs
src/model/: mod.rs
src/pots/: mod.rs  object.rs
src/render/: framebuffer.rs  graphics_settings.rs  image_format.rs  mod.rs  render_global.rs  render_subsystem.rs  shader.rs  teapot.rs  texture.rs
src/structured_shader_language/: mod.rs  parsed_source.rs  ssl_source_parser.rs  ssl_transpiler.rs
src/utils/: into_boxed.rs  (+5 more)
(+70 files in other folders)
