[package]
name = "render_demo"
version = "0.1.0"
authors = ["coffeenotfound"]
edition = "2018"
build = "build.rs"

[dependencies]
glfw = {version = "0.34.0", default-features = false}
gl_bindings = {path = "gl_bindings"}
cgmath = "0.17.0"

num-traits = "0.2.10"
#num = "0.2.0"
byteorder = "1.3.2"
byte-slice-cast = "0.3.5"
lazy_static = "1.4.0"

png = "0.15.2"
lodepng = "2.5.0"
fbxcel = "0.6.0"

# Optimize lodepng in dev profile
[profile.dev.package.lodepng]
opt-level = 3
