[package]
name = "render_demo"
version = "0.1.0"
authors = ["coffeenotfound"]
edition = "2018"
build = "build.rs"

[dependencies]
glfw = {version = "0.36.0", default-features = false}
gl_bindings = {path = "gl_bindings"}
cgmath = "0.17.0"

serde = {version = "1.0.104", features = ["serde_derive"]}
ron = "0.5.1"
#serde_json = "1.0.45"
tokio = "0.2.11"

num = "0.2.1"
byteorder = "1.3.2"
byte-slice-cast = "0.3.5"
lazy_static = "1.4.0"
#enum-map = "0.6.2"

png = "0.15.2"
lodepng = "2.5.0"
fbxcel = "0.6.0"
ktx = "0.3.1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.8", features = ["windef", "winuser", "wingdi"]}

[profile.dev]
codegen-units = 12
opt-level = 0

[profile.release]
opt-level = 3

# Optimize lodepng in dev profile
[profile.dev.package.lodepng]
opt-level = 3
